--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -6,10 +6,9 @@
     <title>Book Buddy</title>
 </head>
 <body>
-    Before 
-    <br>
+    <%- include('../partials/header.ejs') %>
+    <%- include('../partials/errorMessage.ejs') %>
     <%- body %>
-    <br>
-    After
+    
 </body>
 </html>
