--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -9,6 +9,7 @@
 <br>
 <div>
     <% books.forEach( book => { %>
-    <img height="150" width="100" src="<%= book.coverImagePath %>">"
-        <% }) %>
+        <a href="/books/<%= book.id %>" >
+    <img height="150" width="100" src="<%= book.coverImagePath %>">
+        <% }) %></a>
 </div>
